@@ -2,8 +2,10 @@ update-manager (1:0.111.7) jaunty; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
     - updated for the final release
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - ensure qwenview is upgraded (LP: #360222)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Apr 2009 22:11:04 +0200
 
 update-manager (1:0.111.6) jaunty; urgency=low
 
